# ObsidianRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  ObsidianLangchain.ipynb  ObsidianLangchain.py  PENDING_TASKS.md  README.md  RELEASE.md  V3_MIGRATION_PLAN.md  app.py  cerebro.py  docker-compose.yml  install.sh  main.py  manifest.json  pyproject.toml  requirements.txt  run_migration_test.sh  run_test.sh  streamlit_app.py  styles.css  transcript_dotcsv.txt
.github/: copilot-instructions.md
.github/instructions/: ci-cd.md  obsidian-plugin.md  pypi-publishing.md  python-backend.md  rag-patterns.md  streaming-patterns.md  testing.md
.github/workflows/: docker.yml  release-backend.yml  release-plugin.yml  test-backend.yml  test-plugin.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/obsidianrag/: __init__.py  __main__.py  config.py
backend/tests/: __init__.py  conftest.py  test_cli.py  test_db_service.py  test_integration.py  test_ollama.py  test_qa_agent.py  test_server.py
config/: __init__.py  settings.py
docs/: CONTRIBUTING.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
docs/developer-guide/: architecture.md  (+1 more)
plugin/: README.md  esbuild.config.mjs  eslint.config.mjs  jest.config.js  lint_report.json  lint_report_final.json  lint_report_final_v2.json  lint_report_final_v3.json  lint_report_final_v4.json  main.js  manifest.json  package.json  pnpm-lock.yaml  styles.css
services/: db_service.py  metadata_tracker.py  qa_agent.py  qa_service.py
utils/: logger.py
(+24 files in other folders)
