[project]
name = "obsidianrag"
version = "2.0.0"
description = "RAG system for querying Obsidian notes using LangGraph and local LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Enrique Vasallo"}
]
keywords = ["obsidian", "rag", "langchain", "langgraph", "ollama", "chromadb"]

dependencies = [
    # Core LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    
    # Vector store and retrieval
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    
    # API and web
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    
    # ML and embeddings
    "torch>=2.0.0",
    "transformers>=4.40.0",
    
    # Configuration and utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Vasallo94/ObsidianRAG"
Repository = "https://github.com/Vasallo94/ObsidianRAG"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "streamlit_app.py", "config", "services", "utils"]
